add external css

--- a/index.html
+++ b/index.html
@@ -2,21 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Rafael Cavazzani</title>
+    <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
-    <style>
-        body{
-            background-color: rgb(209, 203, 243);
-        }
-        hr{
-            border-style: none;
-            border-top-style: dotted;
-            border-width: 8px;
-            width: 8%;
-            border-color: gray;
-         }
-        
-    </style>
   <!--Pesquisar algo em por exemplo Size HTML MDN-->
   <!-- http://www.cs.cornell.edu/home/kleinber/--> 
     <Table cellspacing="10">
